# ypfinancialmarket

./: Cargo.toml  todo.md
quote-client/: Cargo.toml
quote-client/src/: main.rs
quote-server/: Cargo.toml
quote-server/data/: tickers.txt
quote-server/src/: main.rs  server.rs  stock.rs  udpsender.rs
